complete saving order to db
