# server/src/api/repositories/order.repository.ts
@@ -81,7 +81,7 @@ export class OrderRepository extends BaseRepository<IOrder, Order, IOrderCreateP
                                                     "order.paymentCheck","order.note","order.address",
                                                     "order.shipping","order.total","order.orderAt",
                                                     "user.fname","user.lname","user.email","user.phone","productVariant.id",
-                                                    "orderDetail.quantity","orderDetail.unitPrice",
+                                                    "orderDetail.quantity","orderDetail.unitPrice","orderDetail.id","orderDetail.orderId",
                                                     "product.name","product.imgPaths","brand.name", "size.name","color.name"
                                                    
                                             ])
